# smc_lab

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  locustfile.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
accounts/: admin.py  forms.py  mixins.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
data/: planilha_referencia.xlsx
discord_integration/: apps.py  services.py  tasks.py  tests.py  urls.py  views.py
docs/: CD_CONFIGURACAO_PASSO_A_PASSO.md  CHECKLIST_REVISAO_CODIGO.md  CI_CD_EXPLICACAO.md  DIAGNOSTICO_PERFORMANCE.md  REVISAO_ACCOUNTS.md  REVISAO_DISCORD_INTEGRATION.md  REVISAO_MACRO.md  REVISAO_PAYMENTS.md  REVISAO_TRADES.md  deploy_lightsail.md  docker_cheatsheet.txt  env_production_template.txt  monitoramento.txt  popula_trade.txt  ssh_deploy_cheatsheet.txt
macro/: __init__.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py
painel_smc/: .gitignore  README.md  SMCTrend.spec  main.py  requirements.txt
payments/: admin.py  models.py  tests.py  urls.py  views.py
scripts/: backup_db.sh  debug_admin_500.sh  deploy.sh  docker_prune.sh  install_worker_watchdog.sh  populate_trades.py  precommit_django_check.py  restart_worker_daily.sh  setup_lightsail.sh  worker_watchdog.sh
templates/: base.html  base_landing.html  landing.html  landing2.html  recursos.html
trader_portal/: __init__.py  admin_site.py  asgi.py  celery.py  middleware.py  observability.py  urls.py  wsgi.py
trades/: admin.py  ai_prompts.py  (+11 more)
(+106 files in other folders)
