[project]
name = "smc-lab"
version = "0.1.0"
description = "Portal para Traders - SMC Lab"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "migrations",
    "staticfiles",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort (imports)
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # line too long (deixar para o format)
]

[tool.ruff.lint.per-file-ignores]
# Django settings usam from .base import *; env, BASE_DIR, etc. vêm do base
"trader_portal/settings/dev.py" = ["F405"]
"trader_portal/settings/prod.py" = ["F405"]

[tool.ruff.lint.isort]
known-first-party = ["accounts", "trades", "macro", "payments", "discord_integration", "trader_portal"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
